@@ -1623,9 +1623,18 @@ cmd_return(key_info_t key_info, keys_info_t *keys_info)
 		}
 		else
 		{
-			curr_stats.save_msg = print_search_result(curr_view,
-					input_stat.search_match_found, is_backward_search(sub_mode),
-					&print_search_msg);
+			if(get_current_entry(curr_view)->search_match == 0 &&
+					input_stat.search_match_found)
+			{
+				/* The cursor might have been intentionally moved not by the search.
+				 * Don't show any message. */
+			}
+			else
+			{
+				curr_stats.save_msg = print_search_result(curr_view,
+						input_stat.search_match_found, is_backward_search(sub_mode),
+						&print_search_msg);
+			}
 		}
 	}
 
